--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -203,6 +203,7 @@ html {
     padding: 5px;
     font-size: 1.2rem;
   }
+
   
   .footer {
     display: flex;
@@ -252,7 +253,46 @@ html {
     width: 100%;
     flex: 1;
   }
+  .edit-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   
+  .input-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+  }
+  
+  .input-container input {
+    margin: 5px;
+    padding: 10px;
+    border: 1px solid gray;
+  }
+  
+  .button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  
+  .button-container button {
+    margin: 0 5px;
+    padding: 10px 20px;
+  }
+  
+  .save {
+    background-color: #00bc77;
+    border: none;
+    color: white;
+  }
+  
+  .cancel {
+    background-color: #f44336;
+    border: none;
+    color: white;
+  }
   .edit-button {
     border-color: #00bc77;
     background-color: #00bc77;
@@ -260,6 +300,7 @@ html {
     font-weight: bold;
     padding: 10px;
   }
+
   
   .header {
     color: #fff;
